<resources>
    <string name="app_name">Dogify</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sounds">Sounds</string>
    <string name="translator">Translator</string>
    <string name="training">Training</string>
    <string name="whistle">Whistle</string>
    <string name="article">Article</string>
    <string name="read_now"><u>Read now</u></string>
    <string name="terms"><u>Terms</u></string>
    <string name="privacy"><u>Privacy</u></string>
    <string name="repeat_sound">Repeat Sound</string>
    <string name="food">Food</string>
    <string name="onboard_first_title">Understand the feelings of your dog.</string>
    <string name="onboard_first_description">Do you want to know \n what the dog is thinking?</string>
    <string name="onboard_second_title">Explore your dog\'s feelings.</string>
    <string name="onboard_second_description">Wouldn\'t it be exciting to know what\'s going on in your dog\'s mind?</string>
    <string name="next">Next</string>
    <string name="get_premium">Get Premium</string>
    <string name="premium_yearly">Premium - Yearly</string>
    <string name="first_year">first year</string>
    <string name="upgrade_to_pro">Upgrade to pro</string>
    <string name="unlimited_translation">Unlimited Translation</string>
    <string name="ads_free_using">Ads free using.</string>
    <string name="start_3_days_free_trial">Start 3 days Free Trial</string>
    <string name="continue_btn">Continue</string>
    <string name="your_yearly_plan">Your \nYearly Plan</string>
    <string name="your_weekly_plan">Your \nWeekly Plan</string>
    <string name="USD_29">USD 29</string>
    <string name="USD_09">USD 09</string>
    <string name="start_weekly_free_trial">Start Weekly Free Trial</string>
    <string name="purchase">Purchase</string>
    <string name="subscription_is_auto">Subscription is auto-renewable. You can cancel\n
your subscription at any time</string>
    <string name="rate_your_dog">Rate Your Dog</string>
    <string name="dog_translator">Dog Translator</string>
    <string name="dog_training">Dog Training</string>
    <string name="record_translate">Record \n &amp; Translate</string>
    <string name="dog_whistle">Dog Whistle</string>
    <string name="hz">10000 Hz</string>
    <string name="safe_ones">Safe ones</string>
    <string name="harmful_ones">Harmful ones</string>
    <string name="careful_with_these">Careful with these</string>
    <string name="food_description">When you make food at home for your dog, you are ensured that your dog is eating food tat meets your standards.</string>
    <string name="articles">Articles</string>
    <string name="article_description">Make sure you give your dog lot’s of attention when she/he’s doing the right thing.</string>
    <string name="biting">Biting</string>
    <string name="biting_description">Puppy biting or nipping starts out as a bit of fun, but needs to be controllled quickly to avoid ongoing problems.</string>
    <string name="obidence">Obidence</string>
    <string name="obidence_description">Biting</string>
    <string name="barking">Barking</string>
    <string name="barking_description">Propper dog obedience tarining Should accomplish opens up a clear line of.</string>
    <string name="anxious">Anxious</string>
    <string name="call">Call</string>
    <string name="cold">Cold</string>
    <string name="come_here">Come here</string>
    <string name="comfortable">Comfortable</string>
    <string name="feeding">Feeding</string>
    <string name="happy">Happy</string>
    <string name="hug">Hug</string>
    <string name="hot">Hot</string>
    <string name="hungry">Hungry</string>
    <string name="joyful">Joyful</string>
    <string name="love">Love</string>
    <string name="know">Know</string>
    <string name="playful">Playful</string>
    <string name="surprised">Surprised</string>
    <string name="scared">Scared</string>
    <string name="i_love_you">I love you</string>
    <string name="no_understand">No understand</string>
    <string name="whining">Whining</string>
    <string name="so_happy">So happy</string>
    <string name="uncomfortable">Uncomfortable</string>
    <string name="thirsty">Thirsty</string>
    <string name="apple">Apple</string>
    <string name="apple_article">As long as its seeds are removed (to avoid cyanide poisoning), apple is safe and healthy for doggies.Apple is a fruit full of vitamins, minerals, antioxidants and fiber. It is also a great snack for doggies. However, it contains lots of sugar like banana so watch out for weight gain.Please make sure to cut it into small pieces to avoid choking.</string>
    <string name="banana">Banana</string>
    <string name="banana_article">Banana is safe and healthy for doggies.It is full of potassium, which is good for kidneys and heart. But it also contains high carbs and sugar so watch out for weight gain. Although it\'s not scientifically proven, it is said that banana helps with doggie\'s nausea. Please make sure to cut it into tiny slices to avoid choking.</string>
    <string name="beet">Beet</string>
    <string name="beet_article">It is a great food source. Beets have many positive effects on health. However, it is especially effective in regenerating liver cells and maintaining health.</string>
    <string name="blueberry">Blueberry</string>
    <string name="blueberry_article">Blueberries are recommended for dogs\' diets. Blueberries are rich in antioxidants, selenium zinc and iron, as well as vitamins C, E, A and B.</string>
    <string name="bread">Bread</string>
    <string name="bread_article">White or whole-grain bread is safe for doggies. (Please make sure there are not any dry grapes inside though.) If consumed frequently, you should watch out for your doggie\'s weight gain.</string>
    <string name="broccoli">Broccoli</string>
    <string name="broccoli_article">Broccoli is one of the most important vegetables for the vitamins dogs can eat. Rich in a, c, e and carotene. When broccoli is boiled, cancer-fighting enzymes are released. Therefore, it helps  prevent cancer. Broccoli contains 33 different anti-cancer structures. In addition, some of the structures it contains contain photo chemicals that prevent carcinogenic cells from forming and attacking healthy cells. Strengthens the body\'s defense system. It is necessary to see the benefits of broccoli and not to overdo it. Excessive consumption of broccoli causes decreased thyroid function in dogs.</string>
    <string name="carrot">Carrot</string>
    <string name="carrot_article">Carrot(raw or cooked) is safe and healthy for doggies. It is a low-calorie vegetable full of vitamins, minerals, and fiber. It can also help with digestion. Please make sure to cut it into tiny slices to avoid choking.</string>
    <string name="cucumber">Cucumber</string>
    <string name="cucumber_article">Cucumber is a very useful, low-calorie and easily digested snack for dogs\' digestive system. but when consumed in excess, it can cause stomach pain. Slice your dog before giving cucumber to avoid choking</string>
    <string name="green_peas">Green Peas</string>
    <string name="green_peas_article">If you are feeding your dog a diet, you should definitely add peas to the list. It is rich in thiamine, phosphorus and potassium. You can increase the nutritional value by adding some boiled peas to your dog\'s daily meal. She or he will love her food better when boiled with a piece of meat and natural and unsalted broth.</string>
    <string name="kiwi">Kiwi</string>
    <string name="kiwi_article">More than a slice of the tiny kiwi, which contains fiber potassium and high amounts of vitamin C can harm your dog.</string>
    <string name="lettuce">Lettuce</string>
    <string name="lettuce_article">Your dog will like it because lettuce is crispy. Giving too much can cause your dog to have diarrhea. Take care to give such vegetables as they are a source of fiber and rich food.</string>
    <string name="mango">Mango</string>
    <string name="mango_article">The main fruit part of mango contains vitamins A, B6, C and E. It is very useful for dogs.</string>
    <string name="orange">Orange</string>
    <string name="orange_article">As long as it is peeled, orange is safe and healthy for doggies. It is a low-calorie and nutritious fruit, but please avoid giving too much of it so that your doggie doesn\'t get a stomach ache. Please make sure to cut it into tiny slices to avoid choking.</string>
    <string name="parsley">Parsley</string>
    <string name="parsley_article">Provides your dog with calcium, potassium and  beta-carotene. It reduces bad breath in dogs. If your dog has bad breath, you can add a few pieces of parsley to his food. or you can add it to dog biscuits you make at home.</string>
    <string name="pear">Pear</string>
    <string name="pear_article">Helps digestive system health in dogs. You can chop pears containing vitamins A, C, E, B1 and B2, as well as fiber, folic acid, potassium and copper into cubes to your dog.</string>
    <string name="pineapple">Pineapple</string>
    <string name="pineapple_article">As long as it is fresh, pineapple is safe and healthy for doggies. It is full of vitamins, minerals, and fiber. It is also a great snack for doggies. Please make sure to cut it into tiny slices to avoid choking. Also, don\'t give too much of it your doggie so he/she doesn not get nausea.</string>
    <string name="spinach">Spinach</string>
    <string name="spinach_article">Spinach is rich in vitamins K, A, C, E and B, as well as calcium, iron, magnesium, phosphorus, manganese, potassium, folate, copper and fiber. If your dog consumes excessive amounts of spinach, his/her kidneys can be damaged However, feeding your dog a handful of spinach a month is healthy. It contains fiber, vitamins and antioxidants. Your dog will love spinach so much that you will name it the Popeye.</string>
    <string name="strawberry">Strawberry</string>
    <string name="strawberry_article">Strawberry is safe and healthy for doggies. It is a low-calorie fruit which contains fiber and antioxidants. Please make sure to cut it into two or three pieces to avoid choking.</string>
    <string name="turnip">Turnip</string>
    <string name="turnip_article">It is a vegetable that you can add to the diet list. Turnip keeps your dogs fit with its high nutritional source and toxic cleaning feature.</string>
    <string name="watermelon">Watermelon</string>
    <string name="watermelon_article">As long as it is peeled and its seeds are removed, watermelon is safe and healthy for doggies. It\'s a low-calorie fruit full of vitamins A and C. It is also a great snack for doggies. Please make sure to cut it into tiny slices to avoid choking.</string>
    <string name="alcohol">Alcohol</string>
    <string name="alcohol_article">Alcohol contains a chemical compound called ethanol, which is toxic for doggies. If consumed, it can cause stomach discomfort, coordination problems, vomiting, diarrhea, and dehydration. If consumed a lot, it might lead to lung failure, coma, and death.</string>
    <string name="avocado">Avocado</string>
    <string name="avocado_article">Avocado(including its leaves) contains a chemical compound called persin, which is toxic for doggies. If consumed, it can cause stomach discomfort. Its seed might also block your doggie\'s intestines. If consumed a lot, it can cause respiratory issues and damage your doggie\'s heart and liver.</string>
    <string name="candy">Candy</string>
    <string name="candy_article">Many sugar contains artificial sweeteners, raisins, which are harmful to your dog. even artificial sweeteners are toxic to your dog. When consumed in small amounts, vomiting, diarrhea and loss of appetite are seen. If the  amount consumed increases, it can be fatal.</string>
    <string name="chocolate">Chocolate</string>
</resources>