<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".subscription.PremiumScreenFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_premium_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/premium_screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon_premium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_bg"
            android:padding="20dp"
            android:src="@drawable/icon_premium_screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gl" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/bg_yearly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_pro"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/bg_weekly"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_premium">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_yearly" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/tt_firs_neue_trial_demibold"
                android:gravity="center"
                android:text="@string/your_yearly_plan"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/tt_firs_neue_trial_bold"
                android:gravity="center"
                android:text="@string/USD_29"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/bg_selected_yearly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_selected_yearly"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_premium">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_selected_premium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/tt_firs_neue_trial_demibold"
                android:gravity="center"
                android:text="Your \nYearly Plan"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/tt_firs_neue_trial_bold"
                android:gravity="center"
                android:text="USD 29"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/bg_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_pro"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bg_yearly"
            app:layout_constraintTop_toBottomOf="@+id/icon_premium">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_weekly" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/tt_firs_neue_trial_demibold"
                android:gravity="center"
                android:text="@string/your_weekly_plan"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/tt_firs_neue_trial_bold"
                android:gravity="center"
                android:text="@string/USD_09"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/bg_selected_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_selected_weekly"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_premium">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_selected_premium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/tt_firs_neue_trial_demibold"
                android:gravity="center"
                android:text="Your \nWeekly Plan"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/tt_firs_neue_trial_bold"
                android:gravity="center"
                android:text="USD 09"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/tt_firs_neue_trial_medium"
            android:text="@string/start_weekly_free_trial"
            android:textColor="#1F1F1F"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bg_yearly" />

        <Switch
            android:id="@+id/ic_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="28dp"
            android:padding="4dp"
            android:thumb="@drawable/premium_thumb"
            android:track="@drawable/premium_track"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bg_weekly"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_purchase"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_purchase"
            android:fontFamily="@font/tt_firs_neue_trial_bold"
            android:text="@string/purchase"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_switch" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/tt_firs_neue_trial_regular"
            android:gravity="center"
            android:text="@string/subscription_is_auto"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_purchase" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/tt_firs_neue_trial_regular"
            android:padding="2dp"
            android:text="@string/terms"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:fontFamily="@font/tt_firs_neue_trial_regular"
            android:padding="2dp"
            android:text="@string/privacy"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>